welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value value
		if (nums( i)== value){ x=x+1}
                               ^